--- a/footer_links_config.json
+++ b/footer_links_config.json
@@ -1,1 +1,62 @@
-[{'text':'Homepage','url':'https://explorer.tput.analogmutations.com'}]
+[
+  {
+    "title": "Developers",
+    "links": [
+      {
+        "text": "Documentation",
+        "url": "https://docs.base.org/"
+      },
+      {
+        "text": "GitHub",
+        "url": "https://github.com/base-org"
+      }
+    ]
+  },
+  {
+    "title": "Community",
+    "links": [
+      {
+        "text": "Twitter",
+        "url": "https://twitter.com/buildonbase"
+      },
+      {
+        "text": "Discord",
+        "url": "https://base.org/discord"
+      },
+      {
+        "text": "Blog",
+        "url": "https://base.mirror.xyz/"
+      }
+    ]
+  },
+  {
+    "title": "About Base",
+    "links": [
+      {
+        "text": "About",
+        "url": "https://base.org/about"
+      }
+    ]
+  },
+  {
+    "title": "Partners",
+    "links": [
+      {
+        "text": "MetaSuites",
+        "url": "https://blocksec.com/metasuites"
+      },
+      {
+        "text": "Sourcify",
+        "url": "https://sourcify.dev/"
+      },
+      {
+        "text": "DRPC",
+        "url": "https://drpc.org?ref=559183"
+      },
+      {
+        "text": "BlockSec",
+        "url": "https://blocksec.com/"
+      }
+    ]
+  }
+]
