--- a/footer_links_config.json
+++ b/footer_links_config.json
@@ -16,6 +16,8 @@
     "title": "Community",
     "links": [
       {
+        "icon": 'social/twitter' as const,
+        "iconSize": '18px',
         "text": "Twitter",
         "url": "https://twitter.com/0xthroughput"
       },
