--- a/footer_links_config.json
+++ b/footer_links_config.json
@@ -1,16 +1,16 @@
 [
-  {
+	{
     "title": "About Us",
     "links": [
       {
-        "icon": 'social/twitter' as const,
-        "iconSize": '18px',
+        "icon": "social/twitter" as const,
+        "iconSize": "18px",
         "text": "About",
         "url": "https://throughput.network/"
       },
       {
-        "icon": 'social/twitter' as const,
-        "iconSize": '18px',
+        "icon": "social/twitter" as const,
+        "iconSize": "18px",
         "text": "Contact Us",
         "url": "mailto:hello@throughput.network"
       }
@@ -20,8 +20,8 @@
     "title": "Community",
     "links": [
       {
-        "icon": 'social/twitter' as const,
-        "iconSize": '18px',
+        "icon": "social/twitter" as const,
+        "iconSize": "18px",
         "text": "Twitter",
         "url": "https://twitter.com/0xthroughput"
       },
